--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,8 +8,10 @@
         <meta property="og:title" content="Erklärung für Vernunft und Solidarität in der Corona-Pandemie im Landkreis Weißenburg-Gunzenhausen" />
         <meta property="og:description" content="Erklärung für Vernunft und Solidarität in der Corona-Pandemie im Landkreis Weißenburg-Gunzenhausen">
         <meta property="og:locale" content="de_DE" />
-        <link href="{{ asset('bootstrap.min.css', 'css') }}" rel="stylesheet">
-        <link href="{{ asset('app.css', 'css') }}" rel="stylesheet">
+        <link href="{{ asset('bootstrap.min.css', 'css') }}" rel="stylesheet"/>
+        <link href="{{ asset('app.css', 'css') }}" rel="stylesheet"/>
+        <link rel="icon" href="{{ asset('favicon.png', 'favicon') }}" sizes="any"/>
+        <link rel="apple-touch-icon" href="{{ asset('favicon.png', 'favicon') }}"/>
     </head>
     <body>
         <header class="container-fluid p-4 bg-primary text-white text-center">
