Final version of datenschutz

--- a/templates/views/pages/datenschutz.html.twig
+++ b/templates/views/pages/datenschutz.html.twig
@@ -8,7 +8,7 @@
     Kapellengasse 10<br/>
     91801 Markt Berolzheim<br/>
     Deutschland<br/><br/>
-    sind Betreiber (im Folgenden "wir" oder "Betreiber") der Webseite https://www.erklärung-für-vernunft-und-solidarität.de/ (im
+    sind Betreiber (im Folgenden "wir" oder "Betreiber") der Webseite https://www.erklaerung-fuer-vernunft-und-solidaritaet.de/ (im
     Folgenden „Webseite“) und der darauf angebotenen Dienste und somit verantwortlich für die Erhebung,
     Verarbeitung und Nutzung von personenbezogenen Daten im Sinne des Bundesdatenschutzgesetzes (BDSG)
     und des Telemediengesetzes (TMG).</p>
@@ -34,79 +34,39 @@
 
     <h4>2. Erhebung beim Besuch unserer Webseite</h4>
     <p>Soweit in den folgenden Abschnitten nicht anderweitig dargestellt, werden bei Nutzung unserer Webseiten
-    grundsätzlich keine personenbezogenen Daten erhoben, verarbeitet oder genutzt. Ein Access-Log durch
-    unseren Webserver wurde vollständig deaktiviert.</p>
+    grundsätzlich keine personenbezogenen Daten erhoben, verarbeitet oder genutzt.</p>
 
     <h4>3. Erhebung durch Kontaktaufnahme</h4>
     <p>Wenn Sie uns per E-Mail kontaktieren, speichern wir Ihre E-Mail-Adresse und die
         weiteren Angaben. Dies erfolgt ausschließlich zum Zweck, Ihnen zu antworten bzw. um bei Bedarf zu einem
         späteren Zeitpunkt noch einmal zum Gegenstand der Anfrage mit Ihnen in Kontakt zu treten.</p>
 
-    <h4>3. Erhebung durch Unterzeichnung</h4>
-    <p>Wenn Sie uns per E-Mail kontaktieren, speichern wir Ihre E-Mail-Adresse und die
-        weiteren Angaben. Dies erfolgt ausschließlich zum Zweck, Ihnen zu antworten bzw. um bei Bedarf zu einem
-        späteren Zeitpunkt noch einmal zum Gegenstand der Anfrage mit Ihnen in Kontakt zu treten.</p>
-
+    <h4>4. Erhebung durch Unterzeichnung</h4>
+    <p>Wenn Sie unsere Resolution unterzeichnen, speichern wir den von ihnen angegebenen Namen, den von Ihnen angegebenen
+        Wohnort, die von Ihnen angegebene E-Mail-Adresse, sowie die Ihnen zum Zeitpunkt der Unterzeichnung zugewiesene IP-Adresse.</p>
 
     <h3>§ 3 VERWENDUNG PERSONENBEZOGENER DATEN</h3>
 
-    <p>Die Erhebung und Verarbeitung Ihrer personenbezogenen Daten erfolgt zur Abwicklung des gegenseitigen
-    Vertragsverhältnisses, insbesondere zu dem Zweck:</p>
+    <p>Die Erhebung und Verarbeitung Ihrer personenbezogenen Daten erfolgt zum Zweck:</p>
 
     <p>
-    - Kenntnis darüber zu haben, wer unser Vertragspartner ist;
-    - die eingegebenen Daten auf Plausibilität und Geschäftsfähigkeit der Nutzer zu prüfen,
-    - Vertragsverhältnisse über die Nutzung der Webseite und der darauf angebotenen Dienste mit Ihnen zu
-    begründen, inhaltlich auszugestalten, abzuwickeln und ggfs. zu ändern,
-    - mit Ihnen bei Rückfragen Kontakt aufnehmen zu können.
+    - Kenntnis darüber zu haben, wer unsere unterschreibt;
+    - Die Einmaligkeit einer Unterschrift zu gewährleisten;
+    - Bei strafrechtlich relevantem Verhalten, Anzeige erstatten zu können;
     </p>
-    <p>Vor der Auswertung der vorgenannten Daten werden diese pseudonymisiert. Somit können wir das
-    Nutzerverhalten ohne konkreten Personenbezug auswerten, um unsere Webseite und Services zu verbessern.
-    Der Verwendung Ihrer personenbezogenen Daten für Werbezwecke können Sie jederzeit insgesamt oder für
-    einzelne Maßnahmen widersprechen. Eine formlose Mitteilung in Textform an nachrangig genannte
-    Kontaktdaten (z. B. E‐Mail, Fax, Brief ) reicht hierfür aus.</p>
+    <p>Die Daten werden nicht ausgewertet oder statistisch verarbeitet.</p>
 
     <h3>§ 4 OFFENLEGUNG VON DATEN</h3>
 
-    <p>1. Übermittlung von personenbezogenen Daten an Dritte
-    Ihre personenbezogenen Daten werden an Dritte nur weitergegeben oder sonst übermittelt, wenn dies zum
-    Zweck der Vertragsabwicklung erforderlich ist oder Sie zuvor eingewilligt haben.
-    Ohne Ihre Zustimmung werden wir im Übrigen Ihre Daten nicht an Dritte verkaufen oder anderweitig
-    weitergeben. Etwas anderes gilt nur, soweit hierfür eine gesetzliche Verpflichtung besteht (z. B. Auskunft an
-    bestimmte Behörden im Rahmen ihrer gesetzlichen Aufgaben) oder soweit dies zur Durchsetzung unserer
-    Rechte erforderlich ist, insbesondere zur Durchsetzung von Ansprüchen aus dem Vertragsverhältnis mit
-    Ihnen.</p>
-
-    <p>2. Einbindung von Diensten und Inhalten Dritter
-    Es besteht die Möglichkeit, dass auf unserer Webseite Inhalte Dritter, wie zum Beispiel Videos von YouTube,
-    Kartenmaterial von Google‐Maps, RSS‐Feeds oder Grafiken von anderen Webseiten eingebunden werden.
-    Dies setzt immer voraus, dass die Anbieter dieser Inhalte ("Dritt‐Anbieter") die IP‐Adresse der Nutzer
-    wahrnehmen. Denn ohne die IP‐Adresse könnten sie die Inhalte nicht an den Browser des jeweiligen Nutzers
-    senden. Die IP‐Adresse ist damit für die Darstellung dieser Inhalte erforderlich. Wir bemühen uns, nur
-    solche Inhalte zu verwenden, deren jeweiligen Anbieter die IP‐Adresse lediglich zur Auslieferung der Inhalte
-    verwenden. Jedoch haben wir keinen Einfluss darauf, falls die Dritt‐Anbieter die IP‐Adresse z. B. für
-    statistische Zwecke speichern. Soweit dies uns bekannt ist, klären wir die Nutzer darüber auf.</p>
+    <h4>Übermittlung von personenbezogenen Daten an Dritte</h4>
+    <p>Ihre personenbezogenen Daten werden an Dritte nur weitergegeben oder sonst übermittelt, wenn dies zu den oben
+        genannten Zwecken erforderlich ist</p>
 
     <h3>§ 5 COOKIES UND WEBANALYSEDIENSTE</h3>
-
-    <p>Um unseren Dienst zur Verfügung zu stellen setzen wir die folgenden Cookies:</p>
-    <table>
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Zweck</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>csrf</td>
-            <td>Schutz gegen CSRF-Angriffe. Dieser Cookie ist im Sinne von § 25 Abs. 2 TTDSG zwinged notwendig um unseren Telemediendienst zurf Verfügung zu stellen</td>
-        </tr>
-        </tbody>
-    </table>
+    <p>Um unseren Dienst zur Verfügung setzen wir nur Cookies, die gemäß § 25 Abs. 2 TTDSG zwingend notwendig sind um
+       unsere Plattform zur Verfügung zu stellen</p>
 
     <h3>§ 6 AUSKUNFT, BERICHTIGUNG, KORREKTUR UND LÖSCHUNG VON DATEN</h3>
-
     <p>Ihnen steht ein Auskunftsrecht bezüglich der über Sie gespeicherten personenbezogenen Daten und ein Recht
     auf Berichtigung unrichtiger Daten sowie deren Sperrung und Löschung zu.
     Für eine Auskunft über Ihre personenbezogenen Daten, zur Veranlassung einer Korrektur unrichtiger Daten
