--- a/templates/views/pages/impressum.html.twig
+++ b/templates/views/pages/impressum.html.twig
@@ -10,7 +10,7 @@
             <span class="locality">Markt Berolzheim</span><br/>
             <span class="country-name">Deutschland</span><br/>
             <a class="tel" href="tel:+4917684003000">+49 (0)176 8400 3000</a><br/>
-            <a class="email" href="mailto:vernunft@mh.cx">vernunft@mh.cx</a>
+            <a class="email" href="mailto:mathias@mh.cx">mathias@mh.cx</a>
         </address>
     </div>
 
@@ -23,7 +23,7 @@
             <span class="locality">Markt Berolzheim</span><br/>
             <span class="country-name">Deutschland</span><br/>
             <a class="tel" href="tel:+4917684003000">+49 (0)176 8400 3000</a><br/>
-            <a class="email" href="mailto:vernunft@mh.cx">vernunft@mh.cx</a>
+            <a class="email" href="mailto:mathias@mh.cx">mathias@mh.cx</a>
         </address>
     </div>
 </div>
