Fix some small issues in Datenschutz

--- a/templates/views/pages/datenschutz.html.twig
+++ b/templates/views/pages/datenschutz.html.twig
@@ -49,11 +49,11 @@
 
     <p>Die Erhebung und Verarbeitung Ihrer personenbezogenen Daten erfolgt zum Zweck:</p>
 
-    <p>
-    - Kenntnis darüber zu haben, wer unsere unterschreibt;
-    - Die Einmaligkeit einer Unterschrift zu gewährleisten;
-    - Bei strafrechtlich relevantem Verhalten, Anzeige erstatten zu können;
-    </p>
+    <ul>
+        <li>Kenntnis darüber zu haben, wer unsere Resolution unterschreibt;</li>
+        <li>Die Einmaligkeit einer Unterschrift zu gewährleisten;</li>
+        <li>Bei strafrechtlich relevantem Verhalten, Anzeige erstatten zu können;</li>
+    </ul>
     <p>Die Daten werden nicht ausgewertet oder statistisch verarbeitet.</p>
 
     <h3>§ 4 OFFENLEGUNG VON DATEN</h3>
@@ -79,6 +79,6 @@
     91801 Markt Berolzheim<br/>
     Deutschland<br/><br/>
     +49 (0)176 8400 3000<br/>
-    vernunft@mh.cx
+    mathias@mh.cx
     </p>
 </div>
