Some minor adjustments

--- a/templates/elements/signup/form.html.twig
+++ b/templates/elements/signup/form.html.twig
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col">
                 <div class="mb-3">
-                    {{ form_row(form.acceptFurtherContact, { 'required': false, 'label': 'Ich möchte über die Petition und weitere Aktion informiert werden und erlaube die Kontaktaufnahme via E-Mail.' }) }}
+                    {{ form_row(form.acceptFurtherContact, { 'required': false, 'label': 'Ich möchte über die Resolution und weitere Aktion informiert werden und erlaube die Kontaktaufnahme via E-Mail.' }) }}
                 </div>
             </div>
         </div>
