--- a/templates/views/signup/show-resolution.html.twig
+++ b/templates/views/signup/show-resolution.html.twig
@@ -28,8 +28,7 @@
     </p>
     <p>
         Viele Unternehmen und Einrichtungen in unserer Region versuchen, unter schwierigen Bedingungen
-        (3 G, Quarantänen und Tests) ihre Produktion bzw. ihren Betrieb auch in der Pandemie aufrecht zu
-        erhalten.
+        (3 G, Quarantänen und Tests) ihre Produktion bzw. ihren Betrieb auch in der Pandemie aufrechtzuerhalten.
     </p>
     <p>
         Gleiches gilt für die öffentliche Verwaltung und den Bildungsbereich mit seinen
@@ -52,6 +51,7 @@
         ihre nicht vorhandene Distanz zu rechtsextremen und antisemitischen Gruppierungen jene
         gesellschaftliche Spaltung erst herbeiführen, die sie selbst wehleidig beklagen.
     </p>
+    <p>Anette Pappler, Harald Dösel und Mathias Hertlein</p>
     <h2>Erstunterzeichnende</h2>
     {{ include('elements/signup/signee-list.html.twig', {'signees':firstSignees}) }}
     <h2>Weitere Unterzeichnende</h2>
