Some minor display fixes

--- a/templates/views/signup/show-resolution.html.twig
+++ b/templates/views/signup/show-resolution.html.twig
@@ -1,57 +1,59 @@
-<div class="resolution">
+<div >
     <h2>Resolution</h2>
-    <p>unter dem Motto „Für Vernunft und Solidarität in der Corona-Pandemie" möchten wir auf dieser
-        Plattform möglichst viele Unterschriften sammeln, um den unsäglichen Aufmärschen und
-        Kundgebungen von Coronaleugner*innen und Impfgegner*innen in unserem Landkreis eine starke
-        und unmissverständliche Haltung der Vernunft und der gesellschaftlichen Solidarität
-        entgegenzusetzen.
-    </p>
-    <p>
-        Wir wollen es nicht länger hinnehmen, dass die gewaltigen gesamtgesellschaftlichen Anstrengungen
-        für den Schutz von Leben und Gesundheit durch das verantwortungslose Handeln einer kleinen, aber
-        lautstark und rücksichtslos auftretenden Minderheit gefährdet werden.
-    </p>
-    <p>
-        Denn während auch in unserer Region Tausende ohne Mund-Nasen-Schutz und Abstand auf der Straße
-        ihren egoistischen Befindlichkeiten nachgehen, arbeiten in unseren Krankenhäusern und
-        Pflegeeinrichtungen Ärtzt*innen und Pfleger*innen seit Monaten an ihrer Leistungsgrenze, um Leib
-        und Leben der ihnen anvertrauten Menschen zu schützen.
-    </p>
-    <p>
-        Wir sind überzeugt:
-        Die Mehrheit der Menschen in Deutschland und unserer Region verhält sich vernünftig, solidarisch und
-        rücksichtvoll.
-    </p>
-    <p>
-        Auch wenn es ihnen gewiss nicht leicht fällt, haben Gastwirtschaften, Hotels, Handel und
-        Kultureinrichtungen ihren Betrieb für den Gesundheitsschutz stark eingeschränkt.
-    </p>
-    <p>
-        Viele Unternehmen und Einrichtungen in unserer Region versuchen, unter schwierigen Bedingungen
-        (3 G, Quarantänen und Tests) ihre Produktion bzw. ihren Betrieb auch in der Pandemie aufrechtzuerhalten.
-    </p>
-    <p>
-        Gleiches gilt für die öffentliche Verwaltung und den Bildungsbereich mit seinen
-        Hochschuleinrichtungen, Schulen und Kindertageseinrichtungen.
-    </p>
-    <p>
-        Trotz dieser Schwierigkeiten ist sich die Mehrheit der Bevölkerung aber vollkommen darüber im
-        Klaren, dass die Bekämpfung der Pandemie nur mit diesem Akt der Solidarität gelingen kann.
-        Aufmärsche, welche die Gefahren durch eine Infektion mit dem Coronavirus verharmlosen und dazu
-        aufrufen, die öffentlichen Maßnahmen des solidarischen Gesundheitsschutzes zu unterlaufen, sind
-        dagegen nicht nur verantwortungslos, sondern tragen vor allem auch dazu bei, dass die genannten
-        gesellschaftlichen Bereiche noch länger unter den Auswirkungen der Pandemie leiden müssen, als es
-        notwendig wäre.
-    </p>
-    <p>
-        Deswegen rufen wir die Menschen in unserem Landkreis dazu auf, die weltweite Impfkampagne gegen
-        das Coronavirus SARS-Cov-2 zu unterstützen und die vorhandenen Impfangebote anzunehmen. Wir
-        vertrauen dabei auf die Empfehlungen der Wissenschaft und wenden uns gegen jene, die mit
-        gefährlichen Verschwörungserzählungen unsere liberale und soziale Demokratie angreifen und durch
-        ihre nicht vorhandene Distanz zu rechtsextremen und antisemitischen Gruppierungen jene
-        gesellschaftliche Spaltung erst herbeiführen, die sie selbst wehleidig beklagen.
-    </p>
-    <p>Anette Pappler, Harald Dösel und Mathias Hertlein</p>
+    <div class="resolution">
+        <p>unter dem Motto „Für Vernunft und Solidarität in der Corona-Pandemie" möchten wir auf dieser
+            Plattform möglichst viele Unterschriften sammeln, um den unsäglichen Aufmärschen und
+            Kundgebungen von Coronaleugner*innen und Impfgegner*innen in unserem Landkreis eine starke
+            und unmissverständliche Haltung der Vernunft und der gesellschaftlichen Solidarität
+            entgegenzusetzen.
+        </p>
+        <p>
+            Wir wollen es nicht länger hinnehmen, dass die gewaltigen gesamtgesellschaftlichen Anstrengungen
+            für den Schutz von Leben und Gesundheit durch das verantwortungslose Handeln einer kleinen, aber
+            lautstark und rücksichtslos auftretenden Minderheit gefährdet werden.
+        </p>
+        <p>
+            Denn während auch in unserer Region Tausende ohne Mund-Nasen-Schutz und Abstand auf der Straße
+            ihren egoistischen Befindlichkeiten nachgehen, arbeiten in unseren Krankenhäusern und
+            Pflegeeinrichtungen Ärtzt*innen und Pfleger*innen seit Monaten an ihrer Leistungsgrenze, um Leib
+            und Leben der ihnen anvertrauten Menschen zu schützen.
+        </p>
+        <p>
+            Wir sind überzeugt:
+            Die Mehrheit der Menschen in Deutschland und unserer Region verhält sich vernünftig, solidarisch und
+            rücksichtvoll.
+        </p>
+        <p>
+            Auch wenn es ihnen gewiss nicht leicht fällt, haben Gastwirtschaften, Hotels, Handel und
+            Kultureinrichtungen ihren Betrieb für den Gesundheitsschutz stark eingeschränkt.
+        </p>
+        <p>
+            Viele Unternehmen und Einrichtungen in unserer Region versuchen, unter schwierigen Bedingungen
+            (3 G, Quarantänen und Tests) ihre Produktion bzw. ihren Betrieb auch in der Pandemie aufrechtzuerhalten.
+        </p>
+        <p>
+            Gleiches gilt für die öffentliche Verwaltung und den Bildungsbereich mit seinen
+            Hochschuleinrichtungen, Schulen und Kindertageseinrichtungen.
+        </p>
+        <p>
+            Trotz dieser Schwierigkeiten ist sich die Mehrheit der Bevölkerung aber vollkommen darüber im
+            Klaren, dass die Bekämpfung der Pandemie nur mit diesem Akt der Solidarität gelingen kann.
+            Aufmärsche, welche die Gefahren durch eine Infektion mit dem Coronavirus verharmlosen und dazu
+            aufrufen, die öffentlichen Maßnahmen des solidarischen Gesundheitsschutzes zu unterlaufen, sind
+            dagegen nicht nur verantwortungslos, sondern tragen vor allem auch dazu bei, dass die genannten
+            gesellschaftlichen Bereiche noch länger unter den Auswirkungen der Pandemie leiden müssen, als es
+            notwendig wäre.
+        </p>
+        <p>
+            Deswegen rufen wir die Menschen in unserem Landkreis dazu auf, die weltweite Impfkampagne gegen
+            das Coronavirus SARS-Cov-2 zu unterstützen und die vorhandenen Impfangebote anzunehmen. Wir
+            vertrauen dabei auf die Empfehlungen der Wissenschaft und wenden uns gegen jene, die mit
+            gefährlichen Verschwörungserzählungen unsere liberale und soziale Demokratie angreifen und durch
+            ihre nicht vorhandene Distanz zu rechtsextremen und antisemitischen Gruppierungen jene
+            gesellschaftliche Spaltung erst herbeiführen, die sie selbst wehleidig beklagen.
+        </p>
+        <p>Anette Pappler, Harald Dösel und Mathias Hertlein</p>
+    </div>
     <h2>Erstunterzeichnende</h2>
     {{ include('elements/signup/signee-list.html.twig', {'signees':firstSignees}) }}
     <h2>Weitere Unterzeichnende</h2>
