--- a/templates/elements/signup/signee-list.html.twig
+++ b/templates/elements/signup/signee-list.html.twig
@@ -1,5 +1,5 @@
 <div class="container g-0">
-    <div class="row g-0">
+    <div class="row gx-5 g-0">
         <ul class="col-12 col-md-6 signee-list">
             {% for signee in signees %}
                 {% if loop.index % 2 == 1 %}
