--- a/templates/views/signup/thank-you-for-signup.html.twig
+++ b/templates/views/signup/thank-you-for-signup.html.twig
@@ -1,6 +1,7 @@
-<div class="impresum vcard">
+<div class="thank-you">
     <h2>Vielen Dank für ihre Stimme für Vernunft und Solidarität!</h2>
-    <p>Nach der Überprüfung durch unser Team, wird Ihre Unterschrift innerhalb den nächsten Stunden auf der Webseite erscheinen.</p>
+    <p>Ihre Unterschrift nun durch unser Team geprüft und dann freigeschaltet</p>
+    <p><b>Achtung: Aufgrund des enormen Ansturms kann es bis zur Freischaltung einen Moment dauern</b></p>
     <div class="container g-0">
         <a href="{{ url('show-resolution') }}">Zurück zur Resolution</a>
     </div>
