--- a/templates/elements/signup/signee-list.html.twig
+++ b/templates/elements/signup/signee-list.html.twig
@@ -1,18 +1,14 @@
 <div class="container g-0">
-    <div class="row gx-5 g-0">
-        <ul class="col-12 col-md-6 signee-list">
-            {% for signee in signees %}
-                {% if loop.index % 2 == 1 %}
-                    {{ include('elements/signup/signee-list-entry.html.twig') }}
-                {% endif %}
-            {% endfor %}
-        </ul>
-        <ul class="col-12 col-md-6 signee-list">
-            {% for signee in signees %}
-                {% if loop.index % 2 == 0 %}
-                    {{ include('elements/signup/signee-list-entry.html.twig') }}
-                {% endif %}
-            {% endfor %}
-        </ul>
-    </div>
+    <ul class="row signee-list">
+        {% for signee in signees %}
+            {% if loop.index % 2 == 1 %}
+                {{ include('elements/signup/signee-list-entry.html.twig') }}
+            {% endif %}
+        {% endfor %}
+        {% for signee in signees %}
+            {% if loop.index % 2 == 0 %}
+                {{ include('elements/signup/signee-list-entry.html.twig') }}
+            {% endif %}
+        {% endfor %}
+    </ul>
 </div>
