Add more favicons

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
         <link href="/assets/css/bootstrap.min.css?v={{ 'now'|date('U') }}" rel="stylesheet"/>
         <link href="/assets/css/app.css?v={{ 'now'|date('U') }}" rel="stylesheet"/>
         <link rel="icon" href="/assets/favicon/favicon.png?v={{ 'now'|date('U') }}" sizes="any"/>
-        <link rel="apple-touch-icon" href="/assets/favicon/favicon.png?v={{ 'now'|date('U') }}" sizes="any"/>
+        <link rel="apple-touch-icon" href="/assets/favicon/apple-touch-icon.png?v={{ 'now'|date('U') }}" sizes="any"/>
     </head>
     <body>
         <header class="container-fluid p-4 bg-primary text-white text-center">
