--- a/templates/views/signup/show-resolution.html.twig
+++ b/templates/views/signup/show-resolution.html.twig
@@ -1,24 +1,21 @@
 <div>
     <h2>Kundgebung für Vernunft und Solidarität in der Corona-Pandemie</h2>
-    <div>
+    <div class="text">
         <p>
             Nach dem großen Zuspruch, den unsere "Erklärung für Vernunft und Solidarität in der Corona-Pandemie" in der
             Bevölkerung erhalten hat, möchten wir nun auch mit einer Kundgebung auf dem Festplatz in Gunzenhausen
             ein weiteres deutliches Zeichen setzen. Bisher sind bereits über 4000 Unterschriften zusammengekommen.
         </p>
-
         <p>
             Dieser Erfolg der Resolution zeigt, dass die überwältigende Mehrheit der Menschen in unserem Landkreis für
             den Schutz des menschlichen Lebens eintritt und sich klar gegen Coronaleugner, ihre Verschwörungserzählungen
             und rechte Trittbrettfahrer wendet.
         </p>
-
         <p>
             Deshalb wollen wir uns am <b>22.01.2022</b> um <b>14:00 Uhr</b> auf dem <b>Gunzenhäuser Schießwasen</b> versammeln, um der
             vernünftigen Mehrheit der Bevölkerung nun auch in Präsenz die Möglichkeit zu geben, ihrer Haltung Ausdruck
             zu verleihen.
         </p>
-
         <p>
             Lassen Sie uns gemeinsam der Opfer der Pandemie gedenken und all jene würdigen, die unter der
             kräftezehrenden Situation besonders zu leiden haben. Unsere Solidarität und Empathie gehört dabei den
@@ -28,7 +25,6 @@
             die monatelange Schulschließungen erdulden mussten und erst spät die schützende Corona-Impfung erhalten
             konnten.
         </p>
-
         <p>
             <b>
                 Bei der Kundgebung FFP2-Maske zu tragen, ist für uns selbstverständlich, ebenso wie auf den gebotenen
@@ -37,7 +33,7 @@
         </p>
     </div>
     <h2>Resolution</h2>
-    <div class="resolution">
+    <div class="text">
         <p>unter dem Motto „Für Vernunft und Solidarität in der Corona-Pandemie" möchten wir auf dieser
             Plattform möglichst viele Unterschriften sammeln, um den unsäglichen Aufmärschen und
             Kundgebungen von Coronaleugner*innen und Impfgegner*innen in unserem Landkreis eine starke
